# flask_match_app

./: Makefile  README.md  config.py  pyproject.toml  requirements.txt
app/: __init__.py  models.py  routes.py
app/services/: loader.py  matcher.py  matcher_simple.py
app/templates/: base.html  content.html  index.html  users.html
data/: content1.json  content2.json  content3.json  content4.json  user1.json  user2.json  user3.json  user4.json
tests/services/: test_matcher.py
